--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,116 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="robots" content="noindex" />
-  <!-- meta情報 -->
-  <title>CodeUps</title>
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <!-- ogp -->
-  <meta property="og:title" content="" />
-  <meta property="og:type" content="" />
-  <meta property="og:url" content="" />
-  <meta property="og:image" content="" />
-  <meta property="og:site_name" content="" />
-  <meta property="og:description" content="" />
-  <!-- ファビコン -->
-  <link rel="”icon”" href="" />
-  <!-- css -->
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <!-- JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script defer src="./assets/js/script.js"></script>
-</head>
-<body>
-  <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="robots" content="noindex" />
+    <!-- meta情報 -->
+    <title>CodeUps</title>
+    <meta name="description" content="ダイビングショップ" />
+    <meta name="keywords" content="" />
+    <!-- ogp -->
+    <meta property="og:title" content=" CodeUps" />
+    <meta property="og:type" content="web site" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:site_name" content="CodeUps" />
+    <meta property="og:description" content="ダイビングショップ" />
+    <!-- ファビコン -->
+    <link rel="”icon”" href="" />
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@400;700&family=Noto+Sans+JP&display=swap"
+      rel="stylesheet"
+    />
+    <!-- css -->
+    <link rel="stylesheet" href="../dist/assets/css/style.css" />
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script defer src="./assets/js/script.js"></script>
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <div class="inner">
+        <div class="section-header">
+          <h2 class="section-header__title"><span>c</span>ampaign</h2>
+          <p class="section-header__sub">キャンペーン</p>
+        </div>
 
-  </header>
-  <main>
-    <div class="inner">
-      <p class="test">変更のテスト</p>
-    </div>
-  </main>
-  <footer>
+        <a href="#" class="button">
+          <span>View more</span>
+        </a>
+      </div>
+    </main>
 
-  </footer>
-</body>
+    <!-- <footer class="footer layout-footer">
+      <div class="footer__inner inner">
+        <div class="footer__logo">
+          <img src="./images/common/codeups.svg" alt="ロゴ" />
+        </div>
 
+        <div class="footer__sns">
+          <a href="" class="footer__sns-icon"
+            ><img src="./images/common/sns-icon_1.png" alt="facebookのアイコン"
+          /></a>
+          <a href="" class="footer__sns-icon"
+            ><img
+              src="./images/common/sns-icon_2.png"
+              alt="インスタグラムのアイコン"
+          /></a>
+        </div>
+
+        <nav class="footer__nav footer-nav">
+          <div class="footer-nav__contents">
+            <p class="footer-nav__title">キャンペーン</p>
+            <ul class="footer-nav__items">
+              <li class="footer-nav__item"><a href="#">ライセンス取得</a></li>
+              <li class="footer-nav__item">
+                <a href="#">貸切体験ダイビング</a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#">ナイトダイビング</a>
+              </li>
+            </ul>
+            <p class="footer-nav__title">私たちについて</p>
+          </div>
+
+          <div class="footer-nav__contents">
+            <p class="footer-nav__title">ダイビング情報</p>
+            <ul class="footer-nav__items">
+              <li class="footer-nav__item"><a href="#">ライセンス講習</a></li>
+              <li class="footer-nav__item"><a href="#">体験ダイビング</a></li>
+              <li class="footer-nav__item">
+                <a href="#">ファンダイビング</a>
+              </li>
+            </ul>
+            <p class="footer-nav__title">ブログ</p>
+          </div>
+
+          <div class="footer-nav__contents">
+            <p class="footer-nav__title">お客様の声</p>
+
+            <p class="footer-nav__title">料金一覧</p>
+            <ul class="footer-nav__items">
+              <li class="footer-nav__item"><a href="#">ライセンス講習</a></li>
+              <li class="footer-nav__item"><a href="#">体験ダイビング</a></li>
+              <li class="footer-nav__item">
+                <a href="#">ファンダイビング</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-nav__contents">
+            <p class="footer-nav__title">よくある質問</p>
+            <p class="footer-nav__title">プライバシー<br />ポリシー</p>
+            <p class="footer-nav__title">利用規約</p>
+            <p class="footer-nav__title">お問い合わせ</p>
+          </div>
+        </nav>
+      </div>
+    </footer> -->
+  </body>
 </html>
