--- a/src/index.html
+++ b/src/index.html
@@ -57,28 +57,28 @@
         <nav class="header__nav">
           <ul class="header__nav-items">
             <li class="header__nav-item">
-              <a href="">Campaign<span>キャンペーン</span></a>
+              <a href="#">Campaign<span>キャンペーン</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="">About us<span>私たちについて</span></a>
+              <a href="#">About us<span>私たちについて</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="">Information<span>ダイビング情報</span></a>
+              <a href="#">Information<span>ダイビング情報</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="">Blog<span>ブログ</span></a>
+              <a href="#">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="">Voice<span>お客様の声</span></a>
+              <a href="#">Voice<span>お客様の声</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="">Price<span>料金一覧</span></a>
+              <a href="#">Price<span>料金一覧</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="">FAQ<span>よくある質問</span></a>
+              <a href="#">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="">Contact<span>お問合せ</span></a>
+              <a href="#">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -147,7 +147,7 @@
               <div class="nav-contents__contents">
                 <p class="nav-contents__title"><a href="#">よくある質問</a></p>
                 <p class="nav-contents__title">
-                  <a href="#">プライバシー<br class="md-none" />ポリシー</a>
+                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
                 </p>
                 <p class="nav-contents__title"><a href="#">利用規約</a></p>
                 <p class="nav-contents__title"><a href="#">お問い合わせ</a></p>
@@ -160,7 +160,7 @@
 
     <main>
       <!-- <div class="loading-animation">
-      <div class="loading__img delayScroll">
+      <div class="loading__i51.5mg delayScroll">
         <img src="./assets/images/common/loading-img-left.jpg" class="image" alt="Image 1">
         <img src="./assets/images/common/loading-img-right.jpg" class="image" alt="Image 2">
         <img src="./assets/images/common/mv_1-pc.jpg" class="merged-image" alt="Merged Image">
@@ -177,7 +177,10 @@
                     media="(max-width: 768px)"
                     srcset="./assets/images/common/mv_1.jpg"
                   />
-                  <img src="./assets/images/common/mv_1-pc.jpg" alt="" />
+                  <img
+                    src="./assets/images/common/mv_1-pc.jpg"
+                    alt="海亀が泳いでいる様子"
+                  />
                 </picture>
               </div>
 
@@ -187,7 +190,10 @@
                     media="(max-width: 768px)"
                     srcset="./assets/images/common/mv_2.jpg"
                   />
-                  <img src="./assets/images/common/mv_3-pc.jpg" alt="" />
+                  <img
+                    src="./assets/images/common/mv_2-pc.jpg"
+                    alt="海の中の海亀の様子"
+                  />
                 </picture>
               </div>
 
@@ -197,7 +203,22 @@
                     media="(max-width: 768px)"
                     srcset="./assets/images/common/mv_3.jpg"
                   />
-                  <img src="./assets/images/common/mv_3-pc.jpg" alt="" />
+                  <img
+                    src="./assets/images/common/mv_3-pc.jpg"
+                    alt="海と船が止まっている様子"
+                  />
+                </picture>
+              </div>
+              <div class="swiper-slide">
+                <picture class="swiper-img">
+                  <source
+                    media="(max-width: 768px)"
+                    srcset="./assets/images/common/mv_4.jpg"
+                  />
+                  <img
+                    src="./assets/images/common/mv_4-pc.jpg"
+                    alt="綺麗な海岸の様子"
+                  />
                 </picture>
               </div>
             </div>
@@ -212,7 +233,7 @@
       <section class="campaign campaign-layout">
         <div class="campaign__inner inner">
           <div class="campaign__header section-header">
-            <h2 class="section-header__title"><span>c</span>ampaign</h2>
+            <h2 class="section-header__title"><span>C</span>ampaign</h2>
             <p class="section-header__sub">キャンペーン</p>
           </div>
           <div class="campaign__swiper-wrap campaign-swiper">
@@ -252,7 +273,7 @@
                     <div class="campaign-card__img">
                       <img
                         src="./assets/images/common/campaign_2.jpg"
-                        alt="たくさんの魚が泳いでいる様子"
+                        alt="透明の海と船の様子"
                       />
                     </div>
                     <div class="campaign-card__item-body">
@@ -281,7 +302,34 @@
                     <div class="campaign-card__img">
                       <img
                         src="./assets/images/common/campaign_3.jpg"
-                        alt="たくさんの魚が泳いでいる様子"
+                        alt="たくさんのクラゲが泳いでいる様子"
+                      />
+                    </div>
+                    <div class="campaign-card__item-body">
+                      <div class="campaign-card__meta">
+                        <span class="campaign-card__tag">体験ダイビング</span>
+                        <p class="campaign-card__category">ナイトダイビング</p>
+                      </div>
+                      <div class="campaign-card__contents">
+                        <p class="campaign-card__title">
+                          全部コミコミ(お一人様)
+                        </p>
+                        <div class="campaign-card__price-body">
+                          <span class="campaign-card__price">¥10,000</span>
+                          <span class="campaign-card__price-discount"
+                            >¥8,000</span
+                          >
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="campaign-card swiper-slide">
+                  <a href="#">
+                    <div class="campaign-card__img">
+                      <img
+                        src="./assets/images/common/campaign_4.jpg"
+                        alt="4人がダイビングしている様子"
                       />
                     </div>
                     <div class="campaign-card__item-body">
@@ -305,33 +353,6 @@
                     </div>
                   </a>
                 </li>
-                <li class="campaign-card swiper-slide">
-                  <a href="#">
-                    <div class="campaign-card__img">
-                      <img
-                        src="./assets/images/common/campaign_4.jpg"
-                        alt="たくさんの魚が泳いでいる様子"
-                      />
-                    </div>
-                    <div class="campaign-card__item-body">
-                      <div class="campaign-card__meta">
-                        <span class="campaign-card__tag">体験ダイビング</span>
-                        <p class="campaign-card__category">ナイトダイビング</p>
-                      </div>
-                      <div class="campaign-card__contents">
-                        <p class="campaign-card__title">
-                          全部コミコミ(お一人様)
-                        </p>
-                        <div class="campaign-card__price-body">
-                          <span class="campaign-card__price">¥10,000</span>
-                          <span class="campaign-card__price-discount"
-                            >¥8,000</span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </a>
-                </li>
               </ul>
             </div>
           </div>
@@ -346,7 +367,7 @@
       <section class="about-us layout-about-us">
         <div class="about-us__inner inner">
           <div class="about-us__header section-header">
-            <h2 class="section-header__title"><span>a</span>bout us</h2>
+            <h2 class="section-header__title"><span>A</span>bout us</h2>
             <p class="section-header__sub">私たちについて</p>
           </div>
 
@@ -362,7 +383,7 @@
               <div class="about-us__img-right">
                 <img
                   src="./assets/images/common/about-us_2.jpg"
-                  alt="魚が泳いでいる様子"
+                  alt="二匹の魚が泳いでいる様子"
                 />
               </div>
             </div>
@@ -391,13 +412,16 @@
       <section class="information layout-information">
         <div class="information__inner inner">
           <div class="information__header section-header">
-            <h2 class="section-header__title"><span>i</span>nformation</h2>
+            <h2 class="section-header__title"><span>I</span>nformation</h2>
             <p class="section-header__sub">ダイビング情報</p>
           </div>
 
           <div class="information__wrap">
             <div class="information__img">
-              <img src="./assets/images/common/information.jpg" alt="" />
+              <img
+                src="./assets/images/common/information.jpg"
+                alt="海の中の魚の様子"
+              />
             </div>
 
             <div class="information__body">
@@ -422,7 +446,7 @@
         <div class="blog__inner inner">
           <div class="blog__header section-header">
             <h2 class="blog__header-title section-header__title">
-              <span>b</span>log
+              <span>B</span>log
             </h2>
             <p class="section-header__sub">ブログ</p>
           </div>
@@ -506,7 +530,7 @@
       <section class="voice voice-layout">
         <div class="voice__inner inner">
           <div class="voice__header section-header">
-            <h2 class="section-header__title"><span>v</span>oice</h2>
+            <h2 class="section-header__title"><span>V</span>oice</h2>
             <p class="section-header__sub">お客様の声</p>
           </div>
 
@@ -528,14 +552,14 @@
                     <div class="voice-card__img">
                       <img
                         src="./assets/images/common/voice-card_1.jpg"
-                        alt=""
+                        alt="女性お客様の写真"
                       />
                     </div>
                   </div>
 
                   <p class="voice-card__text">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                     ここにテキストが入ります。ここにテキストが入ります。
                   </p>
                 </div>
@@ -559,14 +583,14 @@
                     <div class="voice-card__img">
                       <img
                         src="./assets/images/common/voice-card_2.jpg"
-                        alt=""
+                        alt="男性のお客様の写真"
                       />
                     </div>
                   </div>
 
                   <p class="voice-card__text">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                     ここにテキストが入ります。ここにテキストが入ります。
                   </p>
                 </div>
@@ -584,7 +608,7 @@
       <section class="price price-layout">
         <div class="price__inner inner">
           <div class="price__header section-header">
-            <h2 class="section-header__title"><span>p</span>rice</h2>
+            <h2 class="section-header__title"><span>P</span>rice</h2>
             <p class="section-header__sub">料金一覧</p>
           </div>
 
@@ -594,7 +618,10 @@
                 media="(max-width: 768px)"
                 srcset="./assets/images/common/price-sp.jpg"
               />
-              <img src="./assets/images/common/price-pc.jpg" alt="" />
+              <img
+                src="./assets/images/common/price-pc.jpg"
+                alt="たくさんの小魚が泳いでいる様子"
+              />
             </picture>
 
             <div class="price__contents">
@@ -719,9 +746,11 @@
             <div class="contact__contents">
               <div class="contact__header section-header">
                 <h2 class="contact__header-title section-header__title">
-                  <span>c</span>ontact
+                  <span>C</span>ontact
                 </h2>
-                <p class="section-header__sub">お問合せ</p>
+                <p class="contact__header-title-sub section-header__sub">
+                  お問合せ
+                </p>
                 <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               </div>
               <div class="contact__button">
@@ -741,7 +770,6 @@
           <div class="footer__logo">
             <img src="./assets/images/common/codeups.svg" alt="ロゴ" />
           </div>
-
           <div class="footer__sns">
             <a href="#" class="footer__sns-icon"
               ><img
@@ -756,7 +784,7 @@
           </div>
         </div>
         <div class="footer__nav nav-contents">
-          <nav class="nav-contents__wrap">
+          <nav class="footer__nav-contents nav-contents__wrap">
             <div class="nav-contents__contents">
               <p class="nav-contents__title">
                 <a href="#">キャンペーン</a>
@@ -814,7 +842,7 @@
             <div class="nav-contents__contents">
               <p class="nav-contents__title"><a href="#">よくある質問</a></p>
               <p class="nav-contents__title">
-                <a href="#">プライバシー<br class="md-none" />ポリシー</a>
+                <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
               </p>
               <p class="nav-contents__title"><a href="#">利用規約</a></p>
               <p class="nav-contents__title"><a href="#">お問い合わせ</a></p>
